--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -12,8 +12,9 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
 DATABASE_PATH=./data/codelims.db
 
 # Rate Limiting
-RATE_LIMIT_MAX=100
-RATE_LIMIT_TIMEWINDOW=900000
+RATE_LIMIT_MAX=1000000
+RATE_LIMIT_TIMEWINDOW=1000000
 
 # Logging
 LOG_LEVEL=info
+JWT_EXPIRES_IN=1m
