--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "@codelims/frontend",
   "version": "1.0.0",
   "description": "CodeLIMS Frontend - Electron + Vue 3 + Vuetify",
-  "main": "dist-electron/main/main.js",
+  "main": "./dist-electron/main/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.7.9",
+    "electron-store": "^11.0.2",
     "pinia": "^2.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -25,21 +25,19 @@
     "vuetify": "^3.7.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.21",
-    "chart.js": "^4.5.1",
     "concurrently": "^9.1.2",
     "electron": "^39.0.0",
     "electron-builder": "^26.0.12",
-    "electron-builder-squirrel-windows": "^26.0.12",
-    "postcss": "^8.5.6",
+    "electron-devtools-installer": "^4.0.0",
+    "postcss": "^8.4.47",
+    "postcss-import": "^16.1.0",
     "sass": "^1.93.2",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^3.3.0",
     "vite": "^6.0.3",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-vuetify": "^2.0.4",
-    "vue-chartjs": "^5.3.2",
     "wait-on": "^8.0.1"
   },
   "build": {
@@ -72,6 +70,10 @@
         "filter": [
           "**/*"
         ]
+      },
+      {
+        "from": "./activation.html",
+        "to": "dist-electron/dist/activation.html"
       }
     ],
     "directories": {
