--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,25 +1,22 @@
 {
   "name": "@nuqtaplus/frontend",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "نقطة بلس - نظام إدارة نقاط البيع والمخازن",
   "main": "./dist-electron/main/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:electron": "vite build && electron-builder",
     "build:win": "vite build && electron-builder --win",
-    "release": "electron-builder --publish always",
-    "preview": "vite preview",
-    "electron:dev": "concurrently pnpm:dev && wait-on http://localhost:5173 && electron .",
+    "publish:win": "vite build && electron-builder --win --publish always",
     "lint": "eslint src",
-    "format": "prettier --write src",
-    "qr-demo": "npx serve electron/scripts/QRCodeMini -p 5174"
+    "format": "prettier --write src"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
-    "electron-store": "^11.0.2",
+    "electron-log": "^5.4.3",
+    "electron-updater": "^6.6.2",
     "node-machine-id": "^1.1.12",
     "pinia": "^2.2.8",
     "vue": "^3.5.13",
@@ -34,6 +31,7 @@
     "electron": "^39.0.0",
     "electron-builder": "^26.0.12",
     "electron-devtools-installer": "^4.0.0",
+    "http-server": "^14.1.1",
     "postcss": "^8.4.47",
     "postcss-import": "^16.1.0",
     "sass": "^1.93.2",
