--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
   "name": "nuqtaplus",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "نقطة بلس - نظام إدارة نقاط البيع والمخازن",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development concurrently \"pnpm --filter backend dev\" \"pnpm --filter frontend electron:dev\"",
-    "dev:safe": "node monitor-processes.js --kill && pnpm dev",
-    "build": "pnpm --filter backend build && pnpm --filter frontend build:win",
-    "build:win": "pnpm build",
-    "build:mac": "pnpm build",
-    "build:linux": "pnpm build",
-    "release": "pnpm build && pnpm --filter frontend release",
-    "gh:release": "node ./release.mjs",
+    "dev": "cross-env NODE_ENV=development concurrently \"pnpm --filter backend dev\" \"pnpm --filter frontend dev\"",
+    "build": "pnpm --filter backend build && pnpm --filter frontend run publish:win",
     "lint": "pnpm -r lint",
     "format": "pnpm -r format",
-    "seed": "node ./packages/backend/src/seed.js",
-    "db:migrate": "pnpm --filter backend db:migrate",
-    "db:generate": "pnpm --filter backend db:generate",
-    "monitor": "node monitor-processes.js --check",
-    "kill-processes": "node monitor-processes.js --kill",
-    "clean-start": "pnpm kill-processes && pnpm dev"
+    "seed": "node ./packages/backend/src/seed.js"
   },
   "keywords": [
     "accounting",
